[gd_scene load_steps=11 format=3 uid="uid://bx26t5detfr2k"]

[ext_resource type="Script" uid="uid://cv31163cujxpd" path="res://components/componentObstacles/Win/win.gd" id="1_ha76j"]
[ext_resource type="Texture2D" uid="uid://50vj0gofkm8n" path="res://kenney_ui-pack/Vector/Green/check_square_grey.svg" id="2_764aq"]
[ext_resource type="Texture2D" uid="uid://fi12ddqk2kgs" path="res://kenney_ui-pack/Vector/Blue/button_rectangle_gloss.svg" id="3_gs7ei"]
[ext_resource type="Texture2D" uid="uid://iyt6qt1uurrc" path="res://kenney_ui-pack/Vector/Blue/button_rectangle_flat.svg" id="4_iw7po"]
[ext_resource type="FontFile" uid="uid://d0cxd77jybrcn" path="res://fonts/lilita_one_regular.ttf" id="5_4c6hs"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y21sy"]
texture = ExtResource("3_gs7ei")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bnju3"]
texture = ExtResource("4_iw7po")
texture_margin_left = 15.0
texture_margin_top = 10.0
texture_margin_right = 15.0
texture_margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_inyjn"]
texture = ExtResource("3_gs7ei")

[sub_resource type="Theme" id="Theme_j02kn"]
default_font = ExtResource("5_4c6hs")
default_font_size = 25
Button/font_sizes/font_size = 30
Button/styles/hover = SubResource("StyleBoxTexture_y21sy")
Button/styles/normal = SubResource("StyleBoxTexture_bnju3")
Button/styles/pressed = SubResource("StyleBoxTexture_inyjn")

[sub_resource type="BoxShape3D" id="BoxShape3D_7q687"]
size = Vector3(4.76648, 0.543945, 1.42969)

[node name="Win" type="Node3D"]
script = ExtResource("1_ha76j")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Win" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Fondo" type="ColorRect" parent="CanvasLayer/Win"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0156863, 1, 0.568627, 0.478431)

[node name="BackgrundButton" type="NinePatchRect" parent="CanvasLayer/Win"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -50.5
offset_right = 90.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_764aq")
region_rect = Rect2(-0.0674629, -0.324189, 32.2624, 32.5195)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="BoxContainer" type="BoxContainer" parent="CanvasLayer/Win"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = -27.0
offset_right = 68.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Win/BoxContainer"]
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="CanvasLayer/Win/BoxContainer"]
layout_mode = 2
theme = SubResource("Theme_j02kn")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Regresar"

[node name="BoxContainer2" type="BoxContainer" parent="CanvasLayer/Win"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.0
offset_top = -278.0
offset_right = 328.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 2

[node name="WinLabel" type="Label" parent="CanvasLayer/Win/BoxContainer2"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_4c6hs")
theme_override_font_sizes/font_size = 120
text = "As Ganado :)"

[node name="WinArea" type="Area3D" parent="."]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="WinArea"]
shape = SubResource("BoxShape3D_7q687")
